--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,42 @@
 target
 git.properties
-.project
-.classpath
-.settings
+*.class
+# Package Files #
+*.jar
+*.war
+*.ear
+*.classpath
+*.settings
+*.project
+# Compiled source #
+###################
+*.class
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+# Logs and databases #
+######################
 *.log
+*.sql
+*.sqlite
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+# Project temporary files #
+.keystore
