--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 		</dependency>
 
 		<dependency>
+    		<groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-remote-driver</artifactId>
+    		<version>2.43.1</version>
+		</dependency>
+
+		<dependency>
         	<groupId>org.seleniumhq.selenium</groupId>
         	<artifactId>selenium-server</artifactId>
         	<version>2.43.1</version>
