--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,16 @@
 			<organizationUrl>http://salt.ece.ubc.ca/</organizationUrl>
 		</developer>
 	</developers>
+	
 
 	<dependencies>
 
+        <dependency>
+			<groupId>org.mozilla</groupId>
+			<artifactId>rhino</artifactId>
+			<version>1.7R4</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -44,6 +51,15 @@
 			<version>1.3.2</version>
 		</dependency>
     
+    
+
+
+<!--		<dependency>
+			<groupId>org.owasp.webscarab</groupId>
+			<artifactId>WebScarab</artifactId>
+			<version>[1.0.0-20131701,)</version>
+		</dependency>
+    -->
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
@@ -66,7 +82,7 @@
         	<groupId>org.seleniumhq.selenium</groupId>
         	<artifactId>selenium-java</artifactId>
         	<version>2.43.1</version>
-    	</dependency>
+    	</dependency>    	
     
 	</dependencies>
 	<build>
