--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>confix</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<name>Concolic DOM Fixture Generator</name>
-	<description>Confix is a Concolic Fixture generator.</description>
+	<description>Confix is a Concolic DOM-based Fixture generator of JavaScript applications.</description>
 	<inceptionYear>2014</inceptionYear>
 
 	<developers>
@@ -20,12 +20,6 @@
 	
 
 	<dependencies>
-
-        <dependency>
-			<groupId>org.mozilla</groupId>
-			<artifactId>rhino</artifactId>
-			<version>1.7R4</version>
-		</dependency>
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -50,22 +44,27 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-    
-    
 
-
-<!--		<dependency>
+<!--	
+		<dependency>
 			<groupId>org.owasp.webscarab</groupId>
 			<artifactId>WebScarab</artifactId>
 			<version>[1.0.0-20131701,)</version>
 		</dependency>
-    -->
+-->
+
+    	<dependency>
+			<groupId>org.mozilla</groupId>
+			<artifactId>rhino</artifactId>
+			<version>1.7R4</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
-			<version>2.43.1</version>
-		</dependency>
-
+			<version>2.44.0</version>
+		</dependency>	
+		
 		<dependency>
     		<groupId>org.seleniumhq.selenium</groupId>
     		<artifactId>selenium-remote-driver</artifactId>
@@ -75,14 +74,15 @@
 		<dependency>
         	<groupId>org.seleniumhq.selenium</groupId>
         	<artifactId>selenium-server</artifactId>
-        	<version>2.43.1</version>
+        	<version>2.44.0</version>
     	</dependency>
 
     	<dependency>
         	<groupId>org.seleniumhq.selenium</groupId>
         	<artifactId>selenium-java</artifactId>
-        	<version>2.43.1</version>
-    	</dependency>    	
+        	<version>2.44.0</version>
+    	</dependency>
+ 	
     
 	</dependencies>
 	<build>
@@ -92,8 +92,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+				<source>1.6</source>
+				<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
